feat: present blocking vs reactive as a decision, not a default
Phase 4 of the v4.0.0 refresh, implementing decision C. This reverses a default
the power has carried since it was written.

WHY. Four steering files had "Spring Boot Reactive" in their titles and the power
referenced R2DBC 67 times, largely as the assumed target. The justification was
that thread-per-request does not scale. Virtual threads on Java 21+ substantially
remove that justification, and published head-to-head benchmarking puts virtual
threads on Netty ahead in roughly half of measured contests against WebFlux, with
WebFlux ahead in about a quarter - not the decisive advantage the older guidance
assumed.

The argument is stronger still for this power's audience specifically. Ported J2EE
logic is blocking by construction: EJB methods, servlet handling, JDBC, synchronous
JMS. Rewriting it into Reactor operator chains stacks a paradigm change on top of a
platform change, and the reactive half is where debuggability and team-readiness
problems concentrate. Keeping it blocking preserves the shape of the original code,
which is exactly what a behavioural-equivalence acceptance criterion compares
against.

WHAT CHANGED. A new canonical section, "Blocking or Reactive: a Decision, Not a
Default", in the shared j2ee module - loaded by all three vendor paths and by
dotnet-to-springboot - plus an equivalent in java-to-springboot.md, which does not
load the shared module.

Guarded against becoming a useless neutral shrug in three ways, per the design:
a stated starting assumption (blocking plus virtual threads) that is explicitly a
default to depart from rather than a verdict; concrete checkable conditions under
which reactive earns its place (streaming or SSE where backpressure matters, very
high or long-lived connection counts, an existing reactive codebase or skilled
team, a fully non-blocking driver stack already in place); and a consequences
table covering web layer, data access, transactions, ported E